@@ -1,3 +1,8 @@
+Thu Mar  5 11:16:55 2015  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* test/ruby/test_refinement.rb: There is no need anymore to supress
+	  warnings.
+
 Thu Mar  5 08:31:02 2015  Rei Odaira  <Rei.Odaira@gmail.com>
 
 	* random.c (random_raw_seed): Avoid calling fill_random_bytes()
